k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoprofs-backend-deployment
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoprofs-backend-deployment
  template:
    metadata:
      labels:
        app: geoprofs-backend-deployment
    spec:
      containers:
        - name: geoprofs-backend
          image: rutger505/geoprofs-backend:${TAG}
          ports:
            - containerPort: 3001
