k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoprofs-frontend-deployment
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoprofs-frontend-deployment
  template:
    metadata:
      labels:
        app: geoprofs-frontend-deployment
    spec:
      containers:
        - name: geoprofs-frontend
          image: rutger505/geoprofs-frontend:${TAG}
          ports:
            - containerPort: 3000
