k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoprofs-backend-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: geoprofs-backend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
