k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoprofs-frontend-service
  namespace: geoprofs-$ENVIRONMENT
spec:
  selector:
    app: geoprofs-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
