k8s/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoprofs-ingress
  namespace: ${NAMESPACE}
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ${INGRESS_HOST}
      secretName: geoprofs-tls
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geoprofs-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: geoprofs-backend-service
                port:
                  number: 80
